cmake_minimum_required(VERSION 3.17)
project(ndk_demo)

set(CMAKE_CXX_STANDARD 14)

add_executable(ndk_demo File.c ctype.c T1.cpp T2.c T3.c T4.c T5.c T6.c T7.c T8.c T9.c T10.c T11.c T12.c T13.c T14.c T15.c T16.c T17.c T18.c T19.c T20.c T21.c T22.c T23.c T24.c T25.cpp T26.cpp Student.h Student.cpp T27.c T29.c T30.c T31.cpp T32.cpp T33.cpp T34.cpp T35.cpp Person.cpp Person.h T36.cpp T37.cpp T38.cpp T39.cpp T40.cpp T41.cpp T42.cpp Pig.h Pig.cpp)
add_executable(ndk_demo File.c ctype.c T1.cpp T2.c T3.c T4.c T5.c T6.c T7.c T8.c T9.c T10.c T11.c T12.c T13.c T14.c T15.c T16.c T17.c T18.c T19.c T20.c T21.c T22.c T23.c T24.c T25.cpp T26.cpp Student.h Student.cpp T27.c T29.c T30.c T31.cpp T32.cpp T33.cpp T34.cpp T35.cpp Person.cpp Person.h T36.cpp T37.cpp T38.cpp T39.cpp T40.cpp T41.cpp T42.cpp Dog.h Dog.cpp Pig.h Pig.cpp T43.cpp)