cmake_minimum_required(VERSION 3.17)
project(ndk_demo)

set(CMAKE_CXX_STANDARD 14)

add_executable(ndk_demo File.c ctype.c T1.cpp T2.c T3.c T4.c T5.c T6.c T7.c T8.c T9.c T10.c T11.c T12.c T13.c T14.c T15.c T16.c T17.c T18.c T19.c T20.c T21.c T22.c T23.c T24.c T25.cpp T26.cpp Student.h Student.cpp T27.c T29.c T30.c T31.cpp T32.cpp T33.cpp T34.cpp T35.cpp Person.cpp Person.h T36.cpp T37.cpp T38.cpp T39.cpp T40.cpp T41.cpp T42.cpp Dog.h Dog.cpp Pig.h Pig.cpp T43.cpp T44.cpp T45.cpp T46.cpp T47.cpp T48.cpp T49.cpp T50.cpp T51.cpp T52.cpp T53.cpp T54.cpp T55.cpp T56.cpp T57.cpp T58.cpp T59.cpp T60.cpp T61.cpp T62.cpp T63.cpp T64.cpp T65.cpp T66.cpp T67.cpp T68.cpp T69.cpp T70.cpp T71.cpp T72.cpp T73.cpp T74.cpp T75.cpp T76.cpp T77.cpp T78.cpp T79.cpp T80.cpp T81.cpp T82.cpp)